--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Global Clicker</title>
+    <title>Star Click</title>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <style>
         body { 
@@ -194,7 +194,7 @@
     <div id="cursor-container"></div>
 
     <div id="name-overlay">
-        <h1>GLOBAL CLICKER</h1>
+        <h1>Star Click</h1>
         <input type="text" id="name-input" placeholder="Your Name" maxlength="15">
         <button id="start-btn">ENTER GAME</button>
     </div>
